# bounded-integer

./: .travis.yml  Cargo.toml  README.md  search-index.js
bounded-integer/: Cargo.toml
bounded-integer-plugin/: Cargo.toml
bounded-integer-plugin/examples/: nibble.rs
bounded-integer-plugin/src/: int_lit.rs  integer_enum.rs  lib.rs
bounded-integer-plugin/tests/: bounded_integer.rs  define.rs  derive.rs  macro.rs  meta.rs  repr.rs  variants.rs
bounded-integer/src/: lib.rs  repr.rs
bounded-integer/src/macros/: mod.rs  ops.rs
bounded-integer/tests/: bit.rs  nibble.rs
bounded_integer/: index.html  macro.bounded_integer_add_repr_impls!.html  macro.bounded_integer_add_self_impls!.html  macro.bounded_integer_div_repr_impls!.html  macro.bounded_integer_div_self_impls!.html  macro.bounded_integer_impl!.html  macro.bounded_integer_impls!.html  macro.bounded_integer_into_repr_impl!.html  macro.bounded_integer_mul_repr_impls!.html  macro.bounded_integer_mul_self_impls!.html  macro.bounded_integer_neg_impls!.html  macro.bounded_integer_rem_repr_impls!.html  macro.bounded_integer_rem_self_impls!.html  macro.bounded_integer_sub_repr_impls!.html  macro.bounded_integer_sub_self_impls!.html  sidebar-items.js  trait.BoundedInteger.html  trait.Repr.html
bounded_integer_meta/: index.html
bounded_integer_plugin/: fn.expand_bounded_integer.html  fn.plugin_registrar.html  index.html  sidebar-items.js  struct.IntLit.html  struct.IntegerEnum.html
src/: bit.rs  lib.rs  nibble.rs  ops_macros.rs  repr.rs  trit.rs
src/macros/: mod.rs  ops.rs
tests/: bit.rs  nibble.rs  trit.rs
(+21 files in other folders)
