[package]
name = "bounded-integer-plugin"
version = "0.1.0"
authors = ["Curtis McEnroe <programble@gmail.com>"]
description = "Bounded integers compiler plugin"
keywords = ["bounded", "integer", "plugin", "macro"]
license = "ISC"
documentation = "https://cmcenroe.me/bounded-integer/bounded_integer_plugin"
repository = "https://github.com/programble/bounded_integer"
readme = "../README.md"

[lib]
plugin = true

[dev-dependencies.bounded-integer]
version = "0.1.0"
path = "../bounded-integer"
